@@ -34,35 +34,8 @@
 default:\
 	:tc=gctags:tc=htags:
 #---------------------------------------------------------------------
-#
 # Configuration for gtags(1)
-#
-# Name:	Type (string|number|boolean)
-# 
-# format: string
-#	Select 'standard' or 'compact'. By default, it assumes 'standard'.
-# suffixes: string
-#	Suffixes of target source file. By default, it assumes
-#	'c,h,y,c++,cc,cpp,cxx,hxx,C,H,s,S,java'
-# skip: string
-#	Skip files among the target files. If the name ends with '/',
-#	gtags skips all files under the directory.
-#	By default, it assumes 'GPATH,GTAGS,GRTAGS,GSYMS,HTML/,tags,TAGS,
-#	y.tab.c,y.tab.h,SCCS/,RCS/,CVS/,CVSROOT/,.deps/'.
-# extractmethod: boolean
-#	Please see source code of gtags(1).
-# icase_path: boolean
-#	Ignore case distinctions in the path. Global's -P option and
-#	gtags's suffixes check are affected by this capability.
-# GTAGS: string
-#	Tag command for definitions. Non of default value.
-# GRTAGS: string
-#	Tag command for references. Non of default value.
-# GSYMS: string
-#	Tag command for other symbols. Non of default value.
-#
-# Htags(1) needs both of GTAGS and GRTAGS. Global(1)'s -s option needs GSYMS.
-#
+# See gtags(1).
 #---------------------------------------------------------------------
 common:\
 	:skip=GPATH,GTAGS,GRTAGS,GSYMS,HTML/,tags,TAGS:\
@@ -127,55 +100,9 @@ ctags-exuberant|Exuberant Ctags|ctags by Darren Hiebert:\
 		($name, $type, $no, $path, $line) = split(/[ \\t]+/, $_, 5);\
 		printf(STDOUT "%-16s %4d %-16s %s", $name, $no, $path, $line);':
 #---------------------------------------------------------------------
-#
 # Configuration for htags(1)
 # Let's paint hypertext with your favorite colors!
-#
-# Name:	Type (string|number|boolean)
-#
-# htags_options: string
-#	default options. If you want to invoke htags with '-v -a'
-#	then write ':htags_options=-v -a:...'.
-# body_begin,body_end: string
-#	body tag
-# title_begin,title_end: string
-#	title tag
-# comment_begin,comment_end: string
-#	comment tag. (/* ... */, // ...)
-# sharp_begin,sharp_end: string
-#	macro tag. (#include, #define, ...)
-# brace_begin,brace_end: string
-#	brace tag. ('{', '}')
-# reserved_begin,reserved_end: string
-#	reserved word tag. (while, if, char, ...)
-# ncol: number
-#	columns of line number. (default = 4)
-# tabs: number
-#	tab stop. (default = 8)
-# full_path: boolean
-#	list file names with full path in file index.
-#	By default, the last component of a path.
-# table_list: boolean
-#	list tags using table tag (<table></table>).
-# normal_suffix: string
-#	normal suffix for html file. By default, 'html'. 
-# gzipped_suffix: string
-#	suffix for compressed html file. By default, 'ghtml'.
-# script_alias: string
-#	specified -s option then use this value as script alias.
-# show_position: boolean
-#	show position per function definition. (false by default.)
-# position_begin, position_end: string
-#	posiotion mark.
-# definition_header: {no|before|after}
-#	link header at definition.
-# other_files: boolean
-#	if 1 then print not only source files but also other files.
-# enable_grep: boolean
-#	enable grep search using CGI program.
-# enable_idutils: boolean
-#	enable idutils search using CGI program.
-#
+# See htags(1).
 #---------------------------------------------------------------------
 htags:\
 	:body_begin=<BODY>:body_end=</BODY>:\
